[package]
name = "tokiactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-channel = "2.1.1"
futures = "0.3.30"
itertools = "0.12.0"
once_cell = "1.19.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
