[package]
name = "tokiactor"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "tokio based Actor framework"
homepage = "http://github.com/yexiangyu/tokiactor"
documentation = "https://docs.rs/tokiactor"
repository = "https://github.com/yexiangyu/tokiactor"
keywords = ["actor", "tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-channel = "2.1.1"
futures = "0.3.30"
itertools = "0.12.0"
rand = "0.8.5"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
